# ansible-readme

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
ansible_readme/: __init__.py  __version__.py  ansible_readme.py  filters.py  logger.py
ansible_readme/data/: readme.md.j2
documentation/source/: approaches.rst  conf.py  discussions.rst  docsdir.rst  index.rst  install.rst  quickstart.rst  reference.rst  tooling.rst  upgrade.rst
test/: conftest.py  test_ansible_readme.py
