[tool:pytest]
testpaths = test

[flake8]
max-line-length = 80

[isort]
known_first_party = ansible_readme
known_third_party = pytest
line_length = 80
multi_line_output = 3
skip = .venv, .tox
include_trailing_comma = True

[metadata]
name = ansible-readme
author = decentral1se
author_email = lukewm@riseup.net
maintainer = decentral1se
maintainer_email = lukewm@riseup.net
url = https://hack.decentral1.se/ansible-readme
project_urls =
  Source Code = https://hack.decentral1.se/ansible-readme
  Documentation = https://ansible-readme.readthedocs.io/
  Maintainer Support = https://decentral1.se
description = Generate documenting README.md files for Ansible roles
long_description = file: README.rst
license = GPLv3
license_file = LICENSE
classifiers =
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Natural Language :: English
  Operating System :: OS Independent
  Topic :: System :: Systems Administration
  Topic :: Utilities
keywords =
    ansible
    ansible-doc
    ansible-roles

[options]
use_scm_version = True
python_requires = >=3.6
setup_requires =
  setuptools_scm
  setuptools_scm_git_archive
package_dir =
  = .
packages = find:
include_package_data = True
zip_safe = False
install_requires =
  Jinja2 >= 2.10.1, <= 2.11
  PyYAML >= 5.1, < 6
  attrs >= 19.3.0, < 20.0
  click >= 7.0, <= 8.0
  colorama >= 0.4.1, <= 0.5

[options.package_data]
ansible_readme = data/*.md.j2

[options.packages.find]
where = .

[build_sphinx]
all_files = 1
build-dir = documentation/build
source-dir = documentation/source
warning-is-error = True

[options.extras_require]
docs =
  sphinx
  sphinx_rtd_theme
  sphinx-autodoc-typehints >= 1.6.0, < 2.0
changelog =
  towncrier <= 19.2.0, < 20.0

[options.entry_points]
console_scripts =
  ansible-readme = ansible_readme.__init__:__main__
